--- a/MLProjectP2Team.ipynb
+++ b/MLProjectP2Team.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1QXggzuYni_ruMlxKTIJ0G4HncEPY_hIo",
-      "authorship_tag": "ABX9TyMiKPRXlDdoFA7MPLf7qxJw",
+      "authorship_tag": "ABX9TyMKsUo1e7SzCTgVjQtKRvfW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,15 +42,18 @@
         "| Sohaila El-Sayed | 20230612 |\n",
         "\n",
         "\n",
-        "## Phase 1: Dataset Selection and Preparation\n",
+        "## Phase 2: Dataset Selection and Preparation\n",
         "### Objective:\n",
-        "1. Select and load the MNIST dataset.\n",
-        "2. Split the data into training, validation, and test sets.\n",
-        "3. Preprocess the dataset to normalize pixel values and flatten images.\n",
+        "1. Implement one case of SVM (Separable “Hard margin” or Non-separable\n",
+        "“Soft margin” → depending on the dataset selection) from scratch as\n",
+        "explained in the lecture “Not bult-in”\n",
+        "Train and classify for SVM, you have to find optimal alpha, calculate W & b\n",
+        "then formulate the classifier function. Then, draw the decision boundary if\n",
+        "possible.\n",
+        "2. Compute evaluation metrics [Accuracy, F1 score, recall, and precision]\n",
         "\n",
         "---\n",
         "\n",
-        "### **Code for Loading and Splitting Dataset**\n",
         "\n",
         "\n"
       ],
